Change font size and weight, stop tab flickering

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,8 +20,6 @@
 body{
     background-color: var(--background-color);
     background-image: url(./images/kayleigh-harrington-yhn4okt6ci0-unsplash.jpg);
-    background-repeat: no-repeat;
-    background-position: 50% 30%;
     background-size: cover;
 }
 
@@ -33,14 +31,16 @@ body{
 }
 .header-subtext{
     color: var(--greenhouse-green);
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: bold;
     padding-top: 5%;
     font-family: 'Times New Roman', Times, serif;
 }
 
 .about-content{
     color: white;
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: bold;
     padding-top: 5%;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -54,7 +54,8 @@ body{
 .menu-item{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(0,0,0, 0.85);
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: bold;
     color: white;
     border: 1px solid white;
     display: flex;
@@ -65,6 +66,7 @@ body{
     padding: 20px;
     margin-bottom: 1%;
     border-radius: 15px;
+    width: 80%;
 }
 
 .menu-item:hover{
